--- a/books/HistoryClimate/read.html
+++ b/books/HistoryClimate/read.html
@@ -1,94 +1,173 @@
-<script>
-  pdfjsLib.GlobalWorkerOptions.workerSrc =
-    'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.14.305/pdf.worker.min.js';
-
-  const url = 'History_Climate.pdf';
-  let pdfDoc = null, pageNum = 1, totalPages = 0, scale = 1.0;
-  let originalPageWidth = null, originalPageHeight = null;
-  let initialZoomApplied = false;
-  let zoomMode = localStorage.getItem('zoomMode') || '100%'; // default to full height
-
-  const canvas = document.getElementById('pdf-canvas');
-  const ctx = canvas.getContext('2d');
-  const pageInput = document.getElementById('page');
-  const totalPagesSpan = document.getElementById('total-pages');
-  const tocSelect = document.getElementById('toc');
-
-  function renderPage(num) {
-    pdfDoc.getPage(num).then(function(page) {
-      if (!originalPageWidth || !originalPageHeight) {
-        const viewport1 = page.getViewport({ scale: 1.0 });
-        originalPageWidth = viewport1.width;
-        originalPageHeight = viewport1.height;
-        if (!initialZoomApplied) {
-          applyZoomMode(zoomMode);
-          initialZoomApplied = true;
-          return;
-        }
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Читать книгу — История климата</title>
+  <style>
+    body { margin: 0; font-family: Arial, sans-serif; background: #f4f5f7; color: #222; }
+    .toolbar {
+      position: sticky;
+      top: 0;
+      z-index: 5;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      align-items: center;
+      padding: 10px;
+      background: #fff;
+      border-bottom: 1px solid #e5e7eb;
+    }
+    .toolbar button,
+    .toolbar input,
+    .toolbar select {
+      font-size: 14px;
+      padding: 6px 10px;
+      border-radius: 6px;
+      border: 1px solid #cbd5e1;
+      background: #fff;
+    }
+    .toolbar button:hover {
+      background: #f1f5f9;
+      cursor: pointer;
+    }
+    .canvas-wrap {
+      height: calc(100vh - 54px);
+      overflow: auto;
+      text-align: center;
+    }
+    canvas {
+      background: #fff;
+      margin: 0 auto;
+      display: block;
+    }
+    @media (max-width: 600px) {
+      .toolbar button,
+      .toolbar input,
+      .toolbar select {
+        flex: 1 1 auto;
+        margin-top: 4px;
       }
-      const viewport = page.getViewport({ scale: scale });
-      canvas.height = viewport.height;
-      canvas.width = viewport.width;
-      page.render({ canvasContext: ctx, viewport: viewport });
+      .toolbar span { flex: 1 1 100%; }
+    }
+  </style>
+</head>
+<body>
+  <div class="toolbar">
+    <button id="first" title="В начало">⏮</button>
+    <button id="prev" title="Предыдущая">←</button>
+    <button id="next" title="Следующая">→</button>
+    <button id="last" title="В конец">⏭</button>
+    <span>Стр. <input id="page" type="number" min="1" value="1" style="width:70px" /></span>
+    <span id="total-pages"></span>
+    <span style="flex:1"></span>
+    <select id="toc">
+      <option value="" disabled selected>Содержание…</option>
+    </select>
+    <button id="fitPage">Во всю страницу</button>
+    <button id="fitOriginal">100%</button>
+    <button id="home">На главную</button>
+  </div>
+
+  <div class="canvas-wrap">
+    <canvas id="pdf-canvas"></canvas>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.14.305/pdf.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.14.305/pdf.worker.min.js"></script>
+  <script>
+    pdfjsLib.GlobalWorkerOptions.workerSrc =
+      'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.14.305/pdf.worker.min.js';
+
+    const url = 'History_Climate.pdf';
+    let pdfDoc = null, pageNum = 1, totalPages = 0, scale = 1.0;
+    let originalPageWidth = null, originalPageHeight = null;
+    let initialZoomApplied = false;
+    let zoomMode = localStorage.getItem('zoomMode') || '100%'; // default to full height
+
+    const canvas = document.getElementById('pdf-canvas');
+    const ctx = canvas.getContext('2d');
+    const pageInput = document.getElementById('page');
+    const totalPagesSpan = document.getElementById('total-pages');
+    const tocSelect = document.getElementById('toc');
+
+    function renderPage(num) {
+      pdfDoc.getPage(num).then(function(page) {
+        if (!originalPageWidth || !originalPageHeight) {
+          const viewport1 = page.getViewport({ scale: 1.0 });
+          originalPageWidth = viewport1.width;
+          originalPageHeight = viewport1.height;
+          if (!initialZoomApplied) {
+            applyZoomMode(zoomMode);
+            initialZoomApplied = true;
+            return;
+          }
+        }
+        const viewport = page.getViewport({ scale: scale });
+        canvas.height = viewport.height;
+        canvas.width = viewport.width;
+        page.render({ canvasContext: ctx, viewport: viewport });
+      });
+      pageInput.value = num;
+    }
+
+    function applyZoomMode(mode) {
+      if (!originalPageWidth || !originalPageHeight) return;
+      const container = canvas.parentElement;
+      if (mode === 'page') {
+        scale = container.clientWidth / originalPageWidth; // fit by width
+      } else if (mode === '100%') {
+        scale = container.clientHeight / originalPageHeight; // fit by height
+      }
+      zoomMode = mode;
+      localStorage.setItem('zoomMode', mode);
+      renderPage(pageNum);
+    }
+
+    pdfjsLib.getDocument(url).promise.then(function(pdf) {
+      pdfDoc = pdf;
+      totalPages = pdf.numPages;
+      pageInput.max = totalPages;
+      totalPagesSpan.textContent = `/ ${totalPages}`;
+      renderPage(pageNum);
+
+      const tocEntries = [
+        { title: 'Введение', page: 3 },
+        { title: 'Глава 1. Климат и история', page: 5 },
+        { title: 'Глава 2. Эти таинственные шумеры', page: 37 },
+        { title: 'Глава 3. Убейдцы и шумеры', page: 71 },
+        { title: 'Глава 4. Конец периода Джемдет-Наср.', page: 110 },
+        { title: 'Глава 5. Войны номов', page: 132 },
+        { title: 'Глава 6. Расцвет и гибель Аккадского царства', page: 150 },
+        { title: 'Глава 7. Возвышение Ура и появление амореев', page: 166 },
+        { title: 'Глава 8. Ближний Восток в ХVI-ХIV веках до н. э.', page: 193 },
+        { title: 'Глава 9. Коллапс бронзового века', page: 218 },
+        { title: 'Глава 10. Современные изменения климата', page: 254 }
+      ];
+      for (const entry of tocEntries) {
+        const opt = document.createElement('option');
+        opt.value = entry.page;
+        opt.textContent = entry.title;
+        tocSelect.appendChild(opt);
+      }
     });
-    pageInput.value = num;
-  }
 
-  function applyZoomMode(mode) {
-    if (!originalPageWidth || !originalPageHeight) return;
-    const container = canvas.parentElement;
-    if (mode === 'page') {
-      scale = container.clientWidth / originalPageWidth; // fit by width
-    } else if (mode === '100%') {
-      scale = container.clientHeight / originalPageHeight; // fit by height
-    }
-    zoomMode = mode;
-    localStorage.setItem('zoomMode', mode);
-    renderPage(pageNum);
-  }
-
-  pdfjsLib.getDocument(url).promise.then(function(pdf) {
-    pdfDoc = pdf;
-    totalPages = pdf.numPages;
-    pageInput.max = totalPages;
-    totalPagesSpan.textContent = `/ ${totalPages}`;
-    renderPage(pageNum);
-
-    const tocEntries = [
-      { title: 'Введение', page: 3 },
-      { title: 'Глава 1. Климат и история', page: 5 },
-      { title: 'Глава 2. Эти таинственные шумеры', page: 37 },
-      { title: 'Глава 3. Убейдцы и шумеры', page: 71 },
-      { title: 'Глава 4. Конец периода Джемдет-Наср.', page: 110 },
-      { title: 'Глава 5. Войны номов', page: 132 },
-      { title: 'Глава 6. Расцвет и гибель Аккадского царства', page: 150 },
-      { title: 'Глава 7. Возвышение Ура и появление амореев', page: 166 },
-      { title: 'Глава 8. Ближний Восток в ХVI-ХIV веках до н. э.', page: 193 },
-      { title: 'Глава 9. Коллапс бронзового века', page: 218 },
-      { title: 'Глава 10. Современные изменения климата', page: 254 }
-    ];
-    for (const entry of tocEntries) {
-      const opt = document.createElement('option');
-      opt.value = entry.page;
-      opt.textContent = entry.title;
-      tocSelect.appendChild(opt);
-    }
-  });
-
-  document.getElementById('first').addEventListener('click', () => { pageNum = 1; renderPage(pageNum); });
-  document.getElementById('prev').addEventListener('click', () => { if (pageNum > 1) { pageNum--; renderPage(pageNum); } });
-  document.getElementById('next').addEventListener('click', () => { if (pageNum < totalPages) { pageNum++; renderPage(pageNum); } });
-  document.getElementById('last').addEventListener('click', () => { pageNum = totalPages; renderPage(pageNum); });
-  pageInput.addEventListener('change', () => {
-    const p = parseInt(pageInput.value, 10);
-    if (!isNaN(p) && p >= 1 && p <= totalPages) { pageNum = p; renderPage(pageNum); } else { pageInput.value = pageNum; }
-  });
-  document.getElementById('fitPage').addEventListener('click', () => applyZoomMode('page'));
-  document.getElementById('fitOriginal').addEventListener('click', () => applyZoomMode('100%'));
-  document.getElementById('home').addEventListener('click', () => { window.location.href = '../../index.html'; });
-  tocSelect.addEventListener('change', function() { const p = parseInt(this.value, 10); if (!isNaN(p)) { pageNum = p; renderPage(pageNum); } });
-  document.addEventListener('keydown', function(e) {
-    if (e.key === 'ArrowLeft' || e.key === 'PageUp') { if (pageNum > 1) { pageNum--; renderPage(pageNum); } }
-    if (e.key === 'ArrowRight' || e.key === 'PageDown') { if (pageNum < totalPages) { pageNum++; renderPage(pageNum); } }
-  });
-</script>
+    document.getElementById('first').addEventListener('click', () => { pageNum = 1; renderPage(pageNum); });
+    document.getElementById('prev').addEventListener('click', () => { if (pageNum > 1) { pageNum--; renderPage(pageNum); } });
+    document.getElementById('next').addEventListener('click', () => { if (pageNum < totalPages) { pageNum++; renderPage(pageNum); } });
+    document.getElementById('last').addEventListener('click', () => { pageNum = totalPages; renderPage(pageNum); });
+    pageInput.addEventListener('change', () => {
+      const p = parseInt(pageInput.value, 10);
+      if (!isNaN(p) && p >= 1 && p <= totalPages) { pageNum = p; renderPage(pageNum); } else { pageInput.value = pageNum; }
+    });
+    document.getElementById('fitPage').addEventListener('click', () => applyZoomMode('page'));
+    document.getElementById('fitOriginal').addEventListener('click', () => applyZoomMode('100%'));
+    document.getElementById('home').addEventListener('click', () => { window.location.href = '../../index.html'; });
+    tocSelect.addEventListener('change', function() { const p = parseInt(this.value, 10); if (!isNaN(p)) { pageNum = p; renderPage(pageNum); } });
+    document.addEventListener('keydown', function(e) {
+      if (e.key === 'ArrowLeft' || e.key === 'PageUp') { if (pageNum > 1) { pageNum--; renderPage(pageNum); } }
+      if (e.key === 'ArrowRight' || e.key === 'PageDown') { if (pageNum < totalPages) { pageNum++; renderPage(pageNum); } }
+    });
+  </script>
+</body>
+</html>
