--- a/books/HistoryClimate/read.html
+++ b/books/HistoryClimate/read.html
@@ -5,68 +5,56 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Читать книгу — История климата</title>
   <style>
-    body { margin: 0; font-family: Arial, sans-serif; background: #f4f5f7; color: #222; }
+    body { margin: 0; font-family: Arial, sans-serif; background: #f4f5f7; color:#222; }
     .toolbar {
-      position: sticky;
-      top: 0;
-      z-index: 5;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      align-items: center;
-      padding: 10px;
-      background: #fff;
-      border-bottom: 1px solid #e5e7eb;
+      position: sticky; top: 0; z-index: 5;
+      display: flex; flex-wrap: wrap; gap: 8px; align-items: center;
+      padding: 10px; background: #fff; border-bottom: 1px solid #e5e7eb;
     }
-    .toolbar button,
-    .toolbar input,
-    .toolbar select {
-      font-size: 14px;
-      padding: 6px 10px;
-      border-radius: 6px;
-      border: 1px solid #cbd5e1;
-      background: #fff;
+    .toolbar button, .toolbar input, .toolbar select {
+      font-size: 14px; padding: 6px 10px; border-radius: 6px;
+      border: 1px solid #cbd5e1; background: #fff;
     }
-    .toolbar button:hover {
-      background: #f1f5f9;
-      cursor: pointer;
-    }
-    .canvas-wrap {
-      height: calc(100vh - 54px);
-      overflow: auto;
-      text-align: center;
-    }
-    canvas {
-      background: #fff;
-      margin: 0 auto;
-      display: block;
-    }
+    .toolbar button:hover { background: #f1f5f9; cursor: pointer; }
+    .zoom-pack { display: inline-flex; gap: 6px; align-items: center; }
+    #zoomSlider { width: 140px; }
+    #zoomLabel { min-width: 48px; text-align: right; }
+    .canvas-wrap { height: calc(100vh - 54px); overflow: auto; text-align: center; }
+    canvas { background: #fff; margin: 0 auto; display: block; }
     @media (max-width: 600px) {
-      .toolbar button,
-      .toolbar input,
-      .toolbar select {
-        flex: 1 1 auto;
-        margin-top: 4px;
-      }
+      .toolbar button, .toolbar input, .toolbar select { flex: 1 1 auto; margin-top: 4px; }
       .toolbar span { flex: 1 1 100%; }
+      #zoomSlider { width: 100%; }
     }
   </style>
 </head>
 <body>
   <div class="toolbar">
     <button id="first" title="В начало">⏮</button>
-    <button id="prev" title="Предыдущая">←</button>
-    <button id="next" title="Следующая">→</button>
-    <button id="last" title="В конец">⏭</button>
+    <button id="prev"  title="Предыдущая">←</button>
+    <button id="next"  title="Следующая">→</button>
+    <button id="last"  title="В конец">⏭</button>
+
     <span>Стр. <input id="page" type="number" min="1" value="1" style="width:70px" /></span>
     <span id="total-pages"></span>
+
     <span style="flex:1"></span>
-    <select id="toc">
+
+    <select id="toc" title="Содержание">
       <option value="" disabled selected>Содержание…</option>
     </select>
-    <button id="fitPage">Во всю страницу</button>
-    <button id="fitOriginal">100%</button>
-    <button id="home">На главную</button>
+
+    <button id="fitPage" title="Подогнать по ширине">Во всю страницу</button>
+    <button id="fitOriginal" title="Подогнать по высоте">100%</button>
+
+    <span class="zoom-pack" title="Интерактивное масштабирование">
+      <button id="zoomOut" title="Уменьшить">−</button>
+      <input id="zoomSlider" type="range" min="50" max="300" value="100" step="5">
+      <button id="zoomIn" title="Увеличить">+</button>
+      <span id="zoomLabel">100%</span>
+    </span>
+
+    <button id="home" title="На главную" style="margin-left:auto">На главную</button>
   </div>
 
   <div class="canvas-wrap">
@@ -76,54 +64,119 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.14.305/pdf.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.14.305/pdf.worker.min.js"></script>
   <script>
+    // PDF.js worker
     pdfjsLib.GlobalWorkerOptions.workerSrc =
       'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.14.305/pdf.worker.min.js';
 
+    // Config / state
     const url = 'History_Climate.pdf';
-    let pdfDoc = null, pageNum = 1, totalPages = 0, scale = 1.0;
+    let pdfDoc = null, pageNum = 1, totalPages = 0;
+    let scale = 1.0;                         // logical (CSS) scale
     let originalPageWidth = null, originalPageHeight = null;
     let initialZoomApplied = false;
     let zoomMode = localStorage.getItem('zoomMode') || '100%'; // default to full height
+    const Z_MIN = 0.5, Z_MAX = 3.0, Z_STEP = 0.1;
 
+    // Elements
     const canvas = document.getElementById('pdf-canvas');
     const ctx = canvas.getContext('2d');
     const pageInput = document.getElementById('page');
     const totalPagesSpan = document.getElementById('total-pages');
     const tocSelect = document.getElementById('toc');
+    const zoomSlider = document.getElementById('zoomSlider');
+    const zoomLabel = document.getElementById('zoomLabel');
 
+    // Render with devicePixelRatio for crisp text on mobile/retina
     function renderPage(num) {
       pdfDoc.getPage(num).then(function(page) {
+        // discover native PDF page size once
         if (!originalPageWidth || !originalPageHeight) {
-          const viewport1 = page.getViewport({ scale: 1.0 });
-          originalPageWidth = viewport1.width;
-          originalPageHeight = viewport1.height;
+          const v1 = page.getViewport({ scale: 1.0 });
+          originalPageWidth = v1.width;
+          originalPageHeight = v1.height;
+
           if (!initialZoomApplied) {
-            applyZoomMode(zoomMode);
+            applyStoredZoomOnce();
             initialZoomApplied = true;
-            return;
+            return; // applyStoredZoomOnce will call render
           }
         }
-        const viewport = page.getViewport({ scale: scale });
-        canvas.height = viewport.height;
-        canvas.width = viewport.width;
-        page.render({ canvasContext: ctx, viewport: viewport });
+
+        // viewport in logical (CSS) pixels
+        const viewport = page.getViewport({ scale });
+
+        // render at device pixel ratio
+        const dpr = window.devicePixelRatio || 1;
+        const outW = Math.floor(viewport.width  * dpr);
+        const outH = Math.floor(viewport.height * dpr);
+        canvas.width  = outW;
+        canvas.height = outH;
+        canvas.style.width  = Math.floor(viewport.width)  + 'px';
+        canvas.style.height = Math.floor(viewport.height) + 'px';
+
+        if ('imageSmoothingEnabled' in ctx) ctx.imageSmoothingEnabled = false;
+
+        const renderContext = {
+          canvasContext: ctx,
+          viewport,
+          transform: dpr !== 1 ? [dpr, 0, 0, dpr, 0, 0] : null
+        };
+        page.render(renderContext);
       });
+
       pageInput.value = num;
     }
 
+    function applyStoredZoomOnce() {
+      if (zoomMode.startsWith('custom:')) {
+        const s = parseFloat(zoomMode.split(':')[1]);
+        if (!isNaN(s)) {
+          setScale(s, /*persist*/false);
+          return renderPage(pageNum);
+        }
+        zoomMode = '100%';
+      }
+      applyZoomMode(zoomMode); // 'page' (fit width) or '100%' (fit height)
+    }
+
+    // Preset zooms:
+    // 'page'  -> fit WIDTH (Во всю страницу)
+    // '100%'  -> fit HEIGHT (full page vertical)
     function applyZoomMode(mode) {
       if (!originalPageWidth || !originalPageHeight) return;
       const container = canvas.parentElement;
+
       if (mode === 'page') {
-        scale = container.clientWidth / originalPageWidth; // fit by width
+        scale = container.clientWidth / originalPageWidth; // fit width
       } else if (mode === '100%') {
-        scale = container.clientHeight / originalPageHeight; // fit by height
+        scale = container.clientHeight / originalPageHeight; // fit height
+      } else if (mode.startsWith('custom:')) {
+        const s = parseFloat(mode.split(':')[1]);
+        if (!isNaN(s)) scale = s;
       }
+
       zoomMode = mode;
       localStorage.setItem('zoomMode', mode);
+      syncZoomUI();
       renderPage(pageNum);
     }
 
+    // Interactive zoom (buttons/slider/wheel)
+    function setScale(newScale, persist = true) {
+      scale = Math.max(Z_MIN, Math.min(Z_MAX, newScale));
+      zoomMode = 'custom:' + scale.toFixed(2);
+      if (persist) localStorage.setItem('zoomMode', zoomMode);
+      syncZoomUI();
+      renderPage(pageNum);
+    }
+
+    function syncZoomUI() {
+      const percent = Math.round(scale * 100);
+      zoomSlider.value = Math.max(zoomSlider.min, Math.min(zoomSlider.max, percent));
+      zoomLabel.textContent = percent + '%';
+    }
+
+    // Load PDF
     pdfjsLib.getDocument(url).promise.then(function(pdf) {
       pdfDoc = pdf;
       totalPages = pdf.numPages;
@@ -131,19 +184,20 @@
       totalPagesSpan.textContent = `/ ${totalPages}`;
       renderPage(pageNum);
 
-      const tocEntries = [
-        { title: 'Введение', page: 3 },
-        { title: 'Глава 1. Климат и история', page: 5 },
-        { title: 'Глава 2. Эти таинственные шумеры', page: 37 },
-        { title: 'Глава 3. Убейдцы и шумеры', page: 71 },
-        { title: 'Глава 4. Конец периода Джемдет-Наср.', page: 110 },
-        { title: 'Глава 5. Войны номов', page: 132 },
-        { title: 'Глава 6. Расцвет и гибель Аккадского царства', page: 150 },
-        { title: 'Глава 7. Возвышение Ура и появление амореев', page: 166 },
-        { title: 'Глава 8. Ближний Восток в ХVI-ХIV веках до н. э.', page: 193 },
-        { title: 'Глава 9. Коллапс бронзового века', page: 218 },
-        { title: 'Глава 10. Современные изменения климата', page: 254 }
-      ];
+      // TOC entries (adjust as needed)
+     const tocEntries = [
+  { title: 'Введение', page: 1 },
+  { title: 'Глава 1. Климат и история', page: 3 },
+  { title: 'Глава 2. Эти таинственные шумеры', page: 35 },
+  { title: 'Глава 3. Убейдцы и шумеры', page: 69 },
+  { title: 'Глава 4. Конец периода Джемдет-Наср.', page: 108 },
+  { title: 'Глава 5. Войны номов', page: 130 },
+  { title: 'Глава 6. Расцвет и гибель Аккадского царства', page: 148 },
+  { title: 'Глава 7. Возвышение Ура и появление амореев', page: 164 },
+  { title: 'Глава 8. Ближний Восток в ХVI-ХIV веках до н. э.', page: 191 },
+  { title: 'Глава 9. Коллапс бронзового века', page: 216 },
+  { title: 'Глава 10. Современные изменения климата', page: 252 }
+];
       for (const entry of tocEntries) {
         const opt = document.createElement('option');
         opt.value = entry.page;
@@ -152,22 +206,73 @@
       }
     });
 
+    // Nav handlers
     document.getElementById('first').addEventListener('click', () => { pageNum = 1; renderPage(pageNum); });
-    document.getElementById('prev').addEventListener('click', () => { if (pageNum > 1) { pageNum--; renderPage(pageNum); } });
-    document.getElementById('next').addEventListener('click', () => { if (pageNum < totalPages) { pageNum++; renderPage(pageNum); } });
-    document.getElementById('last').addEventListener('click', () => { pageNum = totalPages; renderPage(pageNum); });
+    document.getElementById('prev').addEventListener('click',  () => { if (pageNum > 1) { pageNum--; renderPage(pageNum); } });
+    document.getElementById('next').addEventListener('click',  () => { if (pageNum < totalPages) { pageNum++; renderPage(pageNum); } });
+    document.getElementById('last').addEventListener('click',  () => { pageNum = totalPages; renderPage(pageNum); });
+
+    // Page direct jump
     pageInput.addEventListener('change', () => {
       const p = parseInt(pageInput.value, 10);
-      if (!isNaN(p) && p >= 1 && p <= totalPages) { pageNum = p; renderPage(pageNum); } else { pageInput.value = pageNum; }
+      if (!isNaN(p) && p >= 1 && p <= totalPages) { pageNum = p; renderPage(pageNum); }
+      else { pageInput.value = pageNum; }
     });
-    document.getElementById('fitPage').addEventListener('click', () => applyZoomMode('page'));
-    document.getElementById('fitOriginal').addEventListener('click', () => applyZoomMode('100%'));
+
+    // Preset zooms
+    document.getElementById('fitPage').addEventListener('click', () => applyZoomMode('page'));     // fit width
+    document.getElementById('fitOriginal').addEventListener('click', () => applyZoomMode('100%')); // fit height
+
+    // Home
     document.getElementById('home').addEventListener('click', () => { window.location.href = '../../index.html'; });
-    tocSelect.addEventListener('change', function() { const p = parseInt(this.value, 10); if (!isNaN(p)) { pageNum = p; renderPage(pageNum); } });
-    document.addEventListener('keydown', function(e) {
-      if (e.key === 'ArrowLeft' || e.key === 'PageUp') { if (pageNum > 1) { pageNum--; renderPage(pageNum); } }
-      if (e.key === 'ArrowRight' || e.key === 'PageDown') { if (pageNum < totalPages) { pageNum++; renderPage(pageNum); } }
+
+    // TOC jump
+    tocSelect.addEventListener('change', function() {
+      const p = parseInt(this.value, 10);
+      if (!isNaN(p)) { pageNum = p; renderPage(pageNum); }
     });
+
+    // Keyboard nav
+    document.addEventListener('keydown', function(e) {
+      if (e.key === 'ArrowLeft' || e.key === 'PageUp')   { if (pageNum > 1)        { pageNum--; renderPage(pageNum); } }
+      if (e.key === 'ArrowRight' || e.key === 'PageDown'){ if (pageNum < totalPages){ pageNum++; renderPage(pageNum); } }
+    });
+
+    // Interactive zoom controls
+    document.getElementById('zoomIn').addEventListener('click',  () => setScale(scale + Z_STEP));
+    document.getElementById('zoomOut').addEventListener('click', () => setScale(scale - Z_STEP));
+    zoomSlider.addEventListener('input', (e) => setScale(parseInt(e.target.value, 10) / 100));
+
+    // Ctrl/Cmd + wheel zoom (like desktop PDF viewers)
+    canvas.parentElement.addEventListener('wheel', (e) => {
+      if (!(e.ctrlKey || e.metaKey)) return; // require Ctrl/Cmd to zoom
+      e.preventDefault();
+      const delta = e.deltaY < 0 ? Z_STEP : -Z_STEP;
+      setScale(scale + delta);
+    }, { passive: false });
+
+    // Re-apply zoom on resize/orientation change
+    window.addEventListener('resize', () => {
+      if (zoomMode.startsWith('custom:')) {
+        renderPage(pageNum);
+      } else {
+        applyZoomMode(zoomMode); // 'page' or '100%'
+      }
+    });
+
+    // Initialize zoom UI to match stored value (before first render completes)
+    (function initZoomUIFromStorage() {
+      if (zoomMode.startsWith('custom:')) {
+        const s = parseFloat(zoomMode.split(':')[1]);
+        const pct = Math.round((isNaN(s) ? 1.0 : s) * 100);
+        zoomSlider.value = pct;
+        zoomLabel.textContent = pct + '%';
+      } else {
+        // default label; will update after first render
+        zoomSlider.value = 100;
+        zoomLabel.textContent = '100%';
+      }
+    })();
   </script>
 </body>
 </html>
