--- a/books/HistoryClimate/read.html
+++ b/books/HistoryClimate/read.html
@@ -32,7 +32,7 @@
     }
     .toolbar button:hover { background: #f1f5f9; cursor: pointer; }
 
-    /* Make ALL nav arrows consistent & prominent */
+    /* Prominent, consistent nav arrows */
     .nav-group button {
       font-size: 26px;
       font-weight: 700;
@@ -124,9 +124,22 @@
     const zoomSlider = document.getElementById('zoomSlider');
     const zoomLabel = document.getElementById('zoomLabel');
 
+    // Overlay control
+    let overlayHidden = false;
+    function hideOverlayOnce() {
+      if (!overlayHidden) {
+        const overlay = document.getElementById('loadingOverlay');
+        if (overlay) overlay.style.display = 'none';
+        overlayHidden = true;
+      }
+    }
+    // Failsafe: hide after 6s no matter what
+    setTimeout(() => hideOverlayOnce(), 6000);
+
     // Render with devicePixelRatio for crisp text on mobile/retina
     function renderPage(num) {
       pdfDoc.getPage(num).then(function(page) {
+        // discover native PDF page size once
         if (!originalPageWidth || !originalPageHeight) {
           const v1 = page.getViewport({ scale: 1.0 });
           originalPageWidth = v1.width;
@@ -135,10 +148,11 @@
           if (!initialZoomApplied) {
             applyStoredZoomOnce();
             initialZoomApplied = true;
-            return; // applyStoredZoomOnce will call render
+            return; // applyStoredZoomOnce will trigger renderPage again
           }
         }
 
+        // viewport in logical (CSS) pixels
         const viewport = page.getViewport({ scale });
 
         // DPR-aware rendering
@@ -158,20 +172,25 @@
           transform: dpr !== 1 ? [dpr, 0, 0, dpr, 0, 0] : null
         };
 
-        page.render(renderContext).promise.then(function() {
-          // hide loading overlay after first page draws
-          const overlay = document.getElementById('loadingOverlay');
-          if (num === 1 && overlay) overlay.style.display = 'none';
-        });
+        page.render(renderContext).promise
+          .then(() => hideOverlayOnce())
+          .catch((err) => {
+            console.error('PDF render error:', err);
+            hideOverlayOnce();
+          });
+      }).catch((err) => {
+        console.error('PDF getPage error:', err);
+        hideOverlayOnce();
       });
 
       pageInput.value = num;
     }
 
     function applyStoredZoomOnce() {
+      if (!zoomMode) zoomMode = '100%';
       if (zoomMode.startsWith('custom:')) {
         const s = parseFloat(zoomMode.split(':')[1]);
-        if (!isNaN(s)) { setScale(s, /*persist*/false); return renderPage(pageNum); }
+        if (!isNaN(s)) { setScale(s, /*persist*/false); renderPage(pageNum); return; }
         zoomMode = '100%';
       }
       applyZoomMode(zoomMode); // 'page' (fit width) or '100%' (fit height default)
@@ -179,4 +198,163 @@
 
     // Preset zooms:
     // 'page'  -> fit WIDTH (Во всю страницу)
-    // '100%'  -> fit HEI
+    // '100%'  -> fit HEIGHT (vertical fit default)
+    function applyZoomMode(mode) {
+      if (!originalPageWidth || !originalPageHeight) return;
+      const container = canvas.parentElement;
+
+      if (mode === 'page') {
+        scale = container.clientWidth / originalPageWidth; // fit width
+      } else if (mode === '100%') {
+        scale = container.clientHeight / originalPageHeight; // fit height
+      } else if (mode.startsWith('custom:')) {
+        const s = parseFloat(mode.split(':')[1]);
+        if (!isNaN(s)) scale = s;
+      }
+
+      zoomMode = mode;
+      localStorage.setItem('zoomMode', mode);
+      syncZoomUI();
+      renderPage(pageNum);
+    }
+
+    // Interactive zoom (buttons/slider/wheel)
+    function setScale(newScale, persist = true) {
+      scale = Math.max(Z_MIN, Math.min(Z_MAX, newScale));
+      zoomMode = 'custom:' + scale.toFixed(2);
+      if (persist) localStorage.setItem('zoomMode', zoomMode);
+      syncZoomUI();
+      renderPage(pageNum);
+    }
+
+    function syncZoomUI() {
+      const percent = Math.round(scale * 100);
+      zoomSlider.value = Math.max(zoomSlider.min, Math.min(zoomSlider.max, percent));
+      zoomLabel.textContent = percent + '%';
+    }
+
+    // Load PDF
+    pdfjsLib.getDocument(url).promise.then(function(pdf) {
+      pdfDoc = pdf;
+      totalPages = pdf.numPages;
+      pageInput.max = totalPages;
+      totalPagesSpan.textContent = `/ ${totalPages}`;
+      renderPage(pageNum);
+
+      // TOC entries (your original pages)
+      const tocEntries = [
+        { title: 'Введение', page: 3 },
+        { title: 'Глава 1. Климат и история', page: 5 },
+        { title: 'Глава 2. Эти таинственные шумеры', page: 37 },
+        { title: 'Глава 3. Убейдцы и шумеры', page: 71 },
+        { title: 'Глава 4. Конец периода Джемдет-Наср.', page: 110 },
+        { title: 'Глава 5. Войны номов', page: 132 },
+        { title: 'Глава 6. Расцвет и гибель Аккадского царства', page: 150 },
+        { title: 'Глава 7. Возвышение Ура и появление амореев', page: 166 },
+        { title: 'Глава 8. Ближний Восток в ХVI-ХIV веках до н. э.', page: 193 },
+        { title: 'Глава 9. Коллапс бронзового века', page: 218 },
+        { title: 'Глава 10. Современные изменения климата', page: 254 }
+      ];
+      for (const entry of tocEntries) {
+        const opt = document.createElement('option');
+        opt.value = entry.page;
+        opt.textContent = entry.title;
+        tocSelect.appendChild(opt);
+      }
+    }).catch((err) => {
+      console.error('PDF load error:', err);
+      hideOverlayOnce();
+    });
+
+    // Nav handlers
+    document.getElementById('first').addEventListener('click', () => { pageNum = 1; renderPage(pageNum); });
+    document.getElementById('prev').addEventListener('click',  () => { if (pageNum > 1) { pageNum--; renderPage(pageNum); } });
+    document.getElementById('next').addEventListener('click',  () => { if (pageNum < totalPages) { pageNum++; renderPage(pageNum); } });
+    document.getElementById('last').addEventListener('click',  () => { pageNum = totalPages; renderPage(pageNum); });
+
+    // Page direct jump
+    pageInput.addEventListener('change', () => {
+      const p = parseInt(pageInput.value, 10);
+      if (!isNaN(p) && p >= 1 && p <= totalPages) { pageNum = p; renderPage(pageNum); }
+      else { pageInput.value = pageNum; }
+    });
+
+    // Preset zooms
+    document.getElementById('fitPage').addEventListener('click', () => applyZoomMode('page')); // fit width
+
+    // Interactive zoom controls
+    document.getElementById('zoomIn').addEventListener('click',  () => setScale(scale + Z_STEP));
+    document.getElementById('zoomOut').addEventListener('click', () => setScale(scale - Z_STEP));
+    zoomSlider.addEventListener('input', (e) => setScale(parseInt(e.target.value, 10) / 100));
+
+    // Ctrl/Cmd + wheel zoom (desktop)
+    canvas.parentElement.addEventListener('wheel', (e) => {
+      if (!(e.ctrlKey || e.metaKey)) return; // require Ctrl/Cmd to zoom
+      e.preventDefault();
+      const delta = e.deltaY < 0 ? Z_STEP : -Z_STEP;
+      setScale(scale + delta);
+    }, { passive: false });
+
+    // Pinch-to-zoom (mobile: two-finger)
+    let pinchStartDist = null;
+    let pinchStartScale = null;
+    function distance(t1, t2) {
+      const dx = t2.clientX - t1.clientX; const dy = t2.clientY - t1.clientY;
+      return Math.hypot(dx, dy);
+    }
+    canvas.addEventListener('touchstart', (e) => {
+      if (e.touches.length === 2) {
+        pinchStartDist = distance(e.touches[0], e.touches[1]);
+        pinchStartScale = scale;
+      }
+    }, { passive: true });
+    canvas.addEventListener('touchmove', (e) => {
+      if (e.touches.length === 2 && pinchStartDist) {
+        e.preventDefault();
+        const newDist = distance(e.touches[0], e.touches[1]);
+        const factor = newDist / pinchStartDist;
+        setScale(pinchStartScale * factor);
+      }
+    }, { passive: false });
+    canvas.addEventListener('touchend', () => {
+      pinchStartDist = null; pinchStartScale = null;
+    });
+
+    // Home
+    document.getElementById('home').addEventListener('click', () => { window.location.href = '../../index.html'; });
+
+    // TOC jump
+    tocSelect.addEventListener('change', function() {
+      const p = parseInt(this.value, 10);
+      if (!isNaN(p)) { pageNum = p; renderPage(pageNum); }
+    });
+
+    // Keyboard nav
+    document.addEventListener('keydown', function(e) {
+      if (e.key === 'ArrowLeft' || e.key === 'PageUp')   { if (pageNum > 1)         { pageNum--; renderPage(pageNum); } }
+      if (e.key === 'ArrowRight' || e.key === 'PageDown'){ if (pageNum < totalPages){ pageNum++; renderPage(pageNum); } }
+    });
+
+    // Re-apply zoom on resize/orientation change
+    window.addEventListener('resize', () => {
+      if (zoomMode.startsWith('custom:')) {
+        renderPage(pageNum);
+      } else {
+        applyZoomMode(zoomMode); // 'page' or '100%' (default stored)
+      }
+    });
+
+    // Initialize zoom UI to match stored value (before first render completes)
+    (function initZoomUIFromStorage() {
+      if (zoomMode.startsWith('custom:')) {
+        const s = parseFloat(zoomMode.split(':')[1]);
+        const pct = Math.round((isNaN(s) ? 1.0 : s) * 100);
+        zoomSlider.value = pct; zoomLabel.textContent = pct + '%';
+      } else {
+        zoomSlider.value = 100; zoomLabel.textContent = '100%';
+      }
+    })();
+  </script>
+</body>
+</html>
+
