--- a/books/HistoryClimate/read.html
+++ b/books/HistoryClimate/read.html
@@ -272,10 +272,10 @@
     document.getElementById('next').addEventListener('click',  () => { if (pageNum < totalPages) { pageNum++; renderPage(pageNum); } });
     document.getElementById('last').addEventListener('click',  () => { pageNum = totalPages; renderPage(pageNum); });
 
-    // Page direct jump  --my change --
+    // Page direct jump  --my change no change--
     pageInput.addEventListener('change', () => {
       const p = parseInt(pageInput.value, 10);
-      if (!isNaN(p) && p >= 1 && p <= totalPages) { pageNum = p; renderPage(pageNum +1); }
+      if (!isNaN(p) && p >= 1 && p <= totalPages) { pageNum = p; renderPage(pageNum ); }
       else { pageInput.value = pageNum; }
     });
 
@@ -323,10 +323,10 @@
     // Home
     document.getElementById('home').addEventListener('click', () => { window.location.href = '../../index.html'; });
 
-    // TOC jump   
+    // TOC jump   --my change --
     tocSelect.addEventListener('change', function() {
       const p = parseInt(this.value, 10);
-      if (!isNaN(p)) { pageNum = p; renderPage(pageNum); }
+      if (!isNaN(p)) { pageNum = p; renderPage(pageNum+1); }
     });
 
     // Keyboard nav  
