--- a/books/HistoryClimate/read.html
+++ b/books/HistoryClimate/read.html
@@ -323,10 +323,10 @@
     // Home
     document.getElementById('home').addEventListener('click', () => { window.location.href = '../../index.html'; });
 
-    // TOC jump   --my change --
+    // TOC jump   --my change no change--
     tocSelect.addEventListener('change', function() {
       const p = parseInt(this.value, 10);
-      if (!isNaN(p)) { pageNum = p; renderPage(pageNum+1); }
+      if (!isNaN(p)) { pageNum = p; renderPage(pageNum); }
     });
 
     // Keyboard nav  
