--- a/books/HistoryClimate/read.html
+++ b/books/HistoryClimate/read.html
@@ -276,7 +276,7 @@
     pageInput.addEventListener('change', () => {
       const p = parseInt(pageInput.value, 10);
       if (!isNaN(p) && p >= 1 && p <= totalPages) { pageNum = p; renderPage(pageNum ); }
-      else { pageInput.value = pageNum; }
+      else { pageInput.value = pageNum-1; }
     });
 
     // Preset zooms
