--- a/books/HistoryClimate/read.html
+++ b/books/HistoryClimate/read.html
@@ -71,12 +71,7 @@
       <button id="prev"  title="Предыдущая">◀</button>
       <button id="next"  title="Следующая">▶</button>
       <button id="last"  title="В конец">⏭</button>
-    </span>
-
-    <span>Стр. <input id="page" type="number" min="1" value="1" style="width:70px" /></span>
-    <span id="total-pages"></span>
-
-    <span style="flex:1"></span>
+    </span><span style="flex:1"></span>
 
     <button id="fitPage" title="Подогнать по ширине">Во всю страницу</button>
 
@@ -118,9 +113,9 @@
     // Elements
     const canvas = document.getElementById('pdf-canvas');
     const ctx = canvas.getContext('2d');
-    const pageInput = document.getElementById('page');
-    const totalPagesSpan = document.getElementById('total-pages');
-    const tocSelect = document.getElementById('toc');
+    // pageInput removed
+    // totalPagesSpan removed
+const tocSelect = document.getElementById('toc');
     const zoomSlider = document.getElementById('zoomSlider');
     const zoomLabel = document.getElementById('zoomLabel');
 
@@ -182,9 +177,8 @@
         console.error('PDF getPage error:', err);
         hideOverlayOnce();
       });
-
-      pageInput.value = num;
-    }
+    // pageInput update removed
+}
 
     function applyStoredZoomOnce() {
       if (!zoomMode) zoomMode = '100%';
@@ -237,9 +231,9 @@
     pdfjsLib.getDocument(url).promise.then(function(pdf) {
       pdfDoc = pdf;
       totalPages = pdf.numPages;
-      pageInput.max = totalPages;
-      totalPagesSpan.textContent = `/ ${totalPages}`;
-      renderPage(pageNum);
+    // pageInput max removed
+    // total pages text removed
+renderPage(pageNum);
 
       // TOC entries (your original pages)  
       const tocEntries = [
@@ -273,10 +267,10 @@
     document.getElementById('last').addEventListener('click',  () => { pageNum = totalPages; renderPage(pageNum); });
 
     // Page direct jump  --my change no change--
-    pageInput.addEventListener('change', () => {
-      const p = parseInt(pageInput.value, 10);
+    // pageInput removed: addEventListener('change', () => {
+      const p = parseInt(// pageInput removed: value, 10);
       if (!isNaN(p) && p >= 1 && p <= totalPages) { pageNum = p; renderPage(pageNum ); }
-      else { pageInput.value = pageNum; }
+      else { // pageInput removed: value = pageNum; }
     });
 
     // Preset zooms
