--- a/books/HistoryClimate/read.html
+++ b/books/HistoryClimate/read.html
@@ -68,8 +68,8 @@
   <div class="toolbar">
     <span class="nav-group">
             <button id="first" title="В начало">⏮</button>
-      <button id="prev"  title="Предыдущая">◀</button>
-      <button id="next"  title="Следующая">▶</button>
+      <button id="prev"  title="Предыдущая">←</button>
+      <button id="next"  title="Следующая">→</button>
       <button id="last"  title="В конец">⏭</button>
 
     </span>
